[project]
name = "doubao_latency_tester"
version = "1.0.0"
description = "豆包模型延迟测试工具"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "wxpython>=4.2.0",
    "volcengine-python-sdk[ark]",
    "pandas>=1.5.0",
    "matplotlib>=3.6.0",
    "pydantic>=2.10.6",
    "httpx>=0.24.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
doubao_tester = "doubao_tester.main:main"

[tool.setuptools]
py-modules = ["main"]
